--- a/index.html
+++ b/index.html
@@ -3,9 +3,106 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
-    <h1>This is my project!!!</h1>
+    <header>
+      <!-- Header -->
+      <nav>
+        <a href="./index.html">WEBSTUDIO</a>
+        <ul>
+          <li>
+            <a href="./index.html">Studio</a>
+          </li>
+          <li>Portfolio</li>
+          <li>Contacts</li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
+    </header>
+    <main>
+      <!-- Hero -->
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <!-- Benefits -->
+      <section>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technology</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- Team -->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img src="./images/mark-guerrero.jpg" alt="mark-guerrero" width="220"/>
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/tom-ford.jpg" alt="tom-ford" width="220">
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/camila-garcia.jpg" alt="camila-garcia" width="220">
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/daniel-wilson.jpg" alt="daniel-wilson" width="220">
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <!-- Footer -->
+      <section>
+        <h2>WEBSTUDIO</h2>
+        <p>
+          Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+      </section>
+    </footer>
   </body>
 </html>
