--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <header>
       <!-- Header -->
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <p>WebStudio</p>
         <ul>
           <li>
             <a href="./index.html">Studio</a>
           </li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
+          <li>
+            <a href="">Portfolio</a>
+          </li>
+          <li>
+            <a href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address>
@@ -37,6 +41,7 @@
       </section>
       <!-- Benefits -->
       <section>
+        <h2 hidden>Benefits</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -60,7 +65,7 @@
             </p>
           </li>
           <li>
-            <h3>Technology</h3>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -73,22 +78,34 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/mark-guerrero.jpg" alt="mark-guerrero" width="220"/>
+            <img
+              src="./images/mark-guerrero.jpg"
+              alt="mark-guerrero"
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tom-ford.jpg" alt="tom-ford" width="220">
+            <img src="./images/tom-ford.jpg" alt="tom-ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/camila-garcia.jpg" alt="camila-garcia" width="220">
+            <img
+              src="./images/camila-garcia.jpg"
+              alt="camila-garcia"
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/daniel-wilson.jpg" alt="daniel-wilson" width="220">
+            <img
+              src="./images/daniel-wilson.jpg"
+              alt="daniel-wilson"
+              width="264"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -98,9 +115,10 @@
     <footer>
       <!-- Footer -->
       <section>
-        <h2>WEBSTUDIO</h2>
+        <p><a href="./index.html">WEBSTUDIO</a></p>
         <p>
-          Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
         </p>
       </section>
     </footer>
