--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <!-- Header -->
       <nav>
-        <p>WebStudio</p>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="./index.html">Studio</a>
@@ -115,7 +115,7 @@
     <footer>
       <!-- Footer -->
       <section>
-        <p><a href="./index.html">WEBSTUDIO</a></p>
+        <a href="./index.html">WEBSTUDIO</a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
