--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </main>
     <footer>
       <!-- Footer -->
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
